--- a/success.html
+++ b/success.html
@@ -6,6 +6,12 @@
   <title>Payment Success — AhamStree</title>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
+
+  <script type="module">
+  import { clearCart } from "./assets/cart.js";
+  clearCart();
+</script>
+
 <body>
   <div class="container" style="padding-top:30px;">
     <h2>Thank you!</h2>
