--- a/login.html
+++ b/login.html
@@ -26,54 +26,15 @@
   <div id="footer"></div>
 
   <script type="module">
-    import { renderHeader, renderFooter } from "./assets/ui.js";
-    import { supabase } from "./assets/supabase.js";
+    import { renderHeader, renderFooter } from "/assets/ui.js";
+import { supabase } from "/assets/supabase.js";
 
     document.getElementById("header").innerHTML = renderHeader("login");
     document.getElementById("footer").innerHTML = renderFooter();
 
     const app = document.getElementById("app");
 
-    function renderLoggedOut() {
-      app.innerHTML = `
-        <div style="font-weight:900;">Login / Sign up</div>
-        <div class="small" style="margin-top:6px;">
-          Enter your email and we’ll send you a login link (OTP/magic link).
-        </div>
-
-        <div style="margin-top:12px;">
-          <input id="email" class="input" type="email" placeholder="your@email.com" />
-        </div>
-
-        <button id="send" class="btn" style="margin-top:12px;">Send login link</button>
-        <div id="status" class="small" style="margin-top:10px;"></div>
-      `;
-
-      const sendBtn = document.getElementById("send");
-      const status = document.getElementById("status");
-
-      sendBtn.onclick = async () => {
-        const email = document.getElementById("email").value.trim();
-        if (!email) {
-          status.textContent = "Please enter an email.";
-          return;
-        }
-
-        status.textContent = "Sending…";
-
-        const { error } = await supabase.auth.signInWithOtp({
-          email,
-          options: {
-            // We'll set this properly after your custom domain is finalized.
-            // emailRedirectTo: window.location.origin + "/login.html",
-          },
-        });
-
-        status.textContent = error ? ("Error: " + error.message) : "Check your email for the login link.";
-      };
-    }
-
-    function renderLoggedOut() {
+        function renderLoggedOut() {
   app.innerHTML = `
     <div style="font-weight:900;">Account</div>
     <div class="small" style="margin-top:6px;">Login or create a new account.</div>
@@ -202,6 +163,20 @@
   renderOtp();
 }
 
+function renderLoggedIn(email) {
+  app.innerHTML = `
+    <div style="font-weight:900;">My Account</div>
+    <div class="small" style="margin-top:6px;">Signed in as ${email}</div>
+
+    <button id="logout" class="btn secondary" style="margin-top:12px;">
+      Log out
+    </button>
+  `;
+
+  document.getElementById("logout").onclick = async () => {
+    await supabase.auth.signOut();
+  };
+}
 
     // Initial render
     const { data: sessionData } = await supabase.auth.getSession();
